--- a/BaluMediaServer.csproj
+++ b/BaluMediaServer.csproj
@@ -20,6 +20,7 @@
 		<RepositoryUrl>https://github.com/BaluMediaServer/BaluMediaServer</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageReleaseNotes>Initial release with dual camera support</PackageReleaseNotes>
 		
 		<!-- Include symbols for debugging -->
